--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -49,7 +49,7 @@ jobs:
           path: dist
   publish:
     needs: [build]
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'release' && github.event.action == 'published'}}
     runs-on: ubuntu-latest
     env:
         PYPI_PASSWORD: ${{secrets.PYPI_PASSWORD}}
@@ -75,4 +75,3 @@ jobs:
       run: |
         ls
         twine upload wheels/*.whl --skip-existing
-        # && github.event_name == 'release' && github.event.action == 'created'
