--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -9,11 +9,35 @@ on:
     types: [ published ]
 
 jobs:
+  build_windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: [3.7]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies and build
+      run: |
+         python -m pip --version
+         python -m pip install wheel --upgrade
+         python setup.py bdist_wheel
+         dir 
+         move .\dist\*.whl .\gui\
+         
+    - name: Test with pytest
+      run: |
+        python -m pip install tox --upgrade
+        tox
+        dir 
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.7,3.8]
 
     steps:
     - uses: actions/checkout@v2
@@ -45,11 +69,11 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v1
       with:
-          name: wheels
+          name: wheels-${{ matrix.python-version }}
           path: dist
   publish:
     needs: [build]
-    if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'release' && github.event.action == 'published'}}
+    if: ${{ github.ref == 'refs/heads/master' || (github.event_name == 'release' && github.event.action == 'published') }}
     runs-on: ubuntu-latest
     env:
         PYPI_PASSWORD: ${{secrets.PYPI_PASSWORD}}
@@ -70,8 +94,9 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v1
       with:
-          name: wheels
+          name: wheels-3.7
     - name: Twine upload
       run: |
         ls
         twine upload wheels/*.whl --skip-existing
+ 
