ci: use tox-gh-actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,10 @@
 # tox.ini
 [tox]
-envlist = py{37}
+envlist = py37, py38
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
 
 [testenv]
 description = Unit tests
