--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -30,7 +30,7 @@ jobs:
          
     - name: Test with pytest
       run: |
-        python -m pip install tox --upgrade
+        python -m pip install tox tox-gh-actions --upgrade
         tox
         dir 
   build:
@@ -62,7 +62,7 @@ jobs:
          
     - name: Test with pytest
       run: |
-        pip3 install tox --upgrade
+        pip3 install tox tox-gh-actions --upgrade
         tox
         ls 
 
