--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,5 +140,5 @@ jobs:
           path: dist
     - name: Test with pytest
       run: |
-        python -m pip install tox tox-gh-actions tox-external-wheels --upgrade
+        python -m pip install tox==3.28.0 tox-gh-actions==2.12.0 tox-external-wheels 
         tox --external_wheels 'dist/*.whl'
