--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
           name: ETA_Install-win64
           path: artifact
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.9]
@@ -75,15 +75,15 @@ jobs:
     - name: Install dependencies and build
       run: |
          sudo apt-get update 
-         sudo apt-get install -y clang-8
-         sudo apt-get install -y llvm-8
+         sudo apt-get install -y clang-11
+         sudo apt-get install -y llvm-11
          pip3 install virtualenv
          virtualenv venv
          source venv/bin/activate
          ls
-         clang-8 etabackend/cpp/PARSE_TimeTagFileHeader.cpp -S -emit-llvm 
-         clang-8 etabackend/cpp/PARSE_TimeTags.cpp  -S -emit-llvm 
-         clang-8 etabackend/cpp/INFRA_vchn.cpp  -S -emit-llvm
+         clang-11 etabackend/cpp/PARSE_TimeTagFileHeader.cpp -S -emit-llvm 
+         clang-11 etabackend/cpp/PARSE_TimeTags.cpp  -S -emit-llvm 
+         clang-11  etabackend/cpp/INFRA_vchn.cpp  -S -emit-llvm
          mv *.ll etabackend/ll/posix
          python3 setup.py bdist_wheel
     - name: Upload artifact
