--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,20 +9,10 @@ on:
     types: [ published ]
 
 jobs:
-  wget_python_webinstall:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Download python-webinstall.exe
-      uses: wei/wget@v1
-      with:
-        args: -O python-webinstall.exe https://www.python.org/ftp/python/3.10.10/python-3.10.10-amd64.exe
-    - name: Upload artifact
-      uses: actions/upload-artifact@v1
-      with:
-          name: pywi
-          path: python-webinstall.exe
+ 
+          
   build_windows_gui:
-    needs: [build,wget_python_webinstall]
+    needs: [build]
     runs-on: windows-latest
     env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -36,19 +26,25 @@ jobs:
       with:
           name: wheels-3.9
           path: gui
-    - name: Download artifact
-      uses: actions/download-artifact@v1
-      with:
-          name: pywi
-          path: gui
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-activate-base: true
+        activate-environment: ""
     - name: Build Electron app
       run: |
         cd gui
         dir
+        conda create --name ETA python=3.10
+        conda activate ETA
+        conda install conda-forge::conda-pack
+        pip install --find-links=.\ etabackend
+        conda pack -n ETA -o bundle_eta.tar.gz
+        mkdir eta_env
+        tar -xzf bundle_eta.tar.gz -C eta_env
         yarn
         yarn dist
         cd ..
