--- a/gui/package.json
+++ b/gui/package.json
@@ -4,7 +4,7 @@
   "author": "Zuzeng Lin",
   "repository": "github:timetag/ETA",
   "homepage": "http://timetag.github.io",
-  "version": "0.9.5",
+  "version": "0.9.6",
   "description": "ETA is a graphical event-driven programming language for time-tag processing.",
   "scripts": {
     "dev": "electron .",
@@ -17,7 +17,7 @@
   "build": {
     "appId": "com.eta.client",
     "productName": "ETA",
-    "copyright": "Copyright (C) 2021 Zuzeng Lin",
+    "copyright": "Copyright (C) 2023 Zuzeng Lin",
     "mac": {
       "category": "public.app-category.utilities",
       "publish": [
@@ -26,9 +26,11 @@
     },
     "win": {
       "extraFiles": [
-        "conda_ETA_env.yml",
         "backend.ico",
-        "python-webinstall.exe",
+        {
+          "from": "./eta_env/",
+          "to": "etabackend/"
+        },
         {
           "from": "./",
           "to": "etabackend/",
