packaging: bump to 0.9.9

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
 # tox.ini
 [tox]
-envlist = py39, py310
+envlist = py39,  py311
 [gh-actions]
 python =
-    3.10: py310
+    3.11: py311
     3.9: py39
 [testenv]
 description = Unit tests
 deps = 
     pytest
     -rrequirements.txt
+package_glob = 'dist/*.whl'
 commands = pytest
