--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         cd gui
         dir
-        conda create --name ETA python=3.10
+        conda create --name ETA python=3.11
         conda activate ETA
         conda install conda-forge::conda-pack
         pip install --find-links=.\ etabackend
@@ -122,7 +122,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.11"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -136,5 +136,5 @@ jobs:
           path: dist
     - name: Test with pytest
       run: |
-        python -m pip install tox==3.28.0 tox-gh-actions==2.12.0 tox-external-wheels 
-        tox --external_wheels 'dist/*.whl'
+        python -m pip install tox tox-gh-actions 
+        tox 
