--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include requirements.txt
 include etabackend/ll/nt/*.*
 include etabackend/ll/posix/*.*
+include etabackend/ll/m1/*.*
 graft etabackend/static
